objects/TW1_Simulacao_AF__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Valor_da_Venda_UAU__c</fullName>
        <formula>TW1_Caso__r.TW1_Unidade__r.TW1_Valor_da_Venda_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor da Venda UAU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_de_Venda_Atualizado__c</fullName>
        <formula>TW1_Venda_Atualizada_Ate_Habite_se__c /  TW1_IGP_M_Base__r.TW1_Indice_Base__c *  TW1_IGP_M_Atual__r.TW1_Indice_Base__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor de Venda Atualizado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Vencimento_1_Parcela_Anual__c</fullName>
        <label>Vencimento 1ª Parcela Anual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Vencimento_1_Parcela_Semestral__c</fullName>
        <label>Vencimento 1ª Parcela Semestral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Vencimento_Parcela_Mensal__c</fullName>
        <label>Vencimento 1ª Parcela Mensal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Vencimento_Parcela_Unica_B__c</fullName>
        <label>Vencimento Parcela Única B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Vencimento_Parcela_Unica__c</fullName>
        <label>Vencimento Parcela Única</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Venda_Atualizada_Ate_Habite_se__c</fullName>
        <formula>IF( TW1_Data_da_Venda__c &gt;    TW1_Data_Habite_se__c ,



 TW1_Valor_da_Venda_UAU__c ,


TW1_Valor_da_Venda_UAU__c /   TW1_INCC_Base__r.TW1_Indice_Base__c  *   TW1_INCC_Habite_se__r.TW1_Indice_Base__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venda Atualizada Até Habite-se</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Venda_Atualizada_Com_Juros__c</fullName>
        <formula>TW1_Valor_de_Venda_Atualizado__c  *  TW1_Fator_de_Juros__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venda Atualizada Com Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Simulação de Alienação Fiduciária</label>
    <nameField>
        <displayFormat>AF{0000}</displayFormat>
        <label>Nome de Simulação Alienação Fiduciária</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulações de Alienação Fiduciária</pluralLabel>
    <recordTypes>
        <fullName>TW1_Padrao</fullName>
        <active>true</active>
        <label>Padrão</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AprovacaoDiretoria</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Profile.Name = &quot;Diretoria&quot;), 
ISCHANGED(TW1_Situacao_Simulacao_AF__c),
OR(ISPICKVAL(TW1_Situacao_Simulacao_AF__c, &quot;Aprovada pela Diretoria&quot;),
ISPICKVAL(TW1_Situacao_Simulacao_AF__c, &quot;Reprovada pela Diretoria&quot;))
)</errorConditionFormula>
        <errorDisplayField>TW1_Situacao_Simulacao_AF__c</errorDisplayField>
        <errorMessage>Somente a Diretoria poderá alterar a situação para Aprovada pela Diretoria ou Reprovada pela Diretoria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ConferenciaValores</fullName>
        <active>true</active>
        <description>Não é possível salvar a simulação se houver valores entre o saldo da fiduciária e o total de parcelas.</description>
        <errorConditionFormula>AND(TW1_Conferencia_Valores__c &lt;&gt; 0,
ISCHANGED ( TW1_Enviar_para_Aprovacao__c ),
ISPICKVAL( TW1_Enviar_para_Aprovacao__c ,&quot;Sim&quot;)
)</errorConditionFormula>
        <errorMessage>Não é possível salvar a simulação de AF se houver divergências entre o Saldo da Fiduciária e o somatório das parcelas. Favor verificar a diferença no campo Conferência de Valores.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Editar_AF_Selecionada</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;Gestor Financeiro&quot;,

   TW1_Selecionada__c=TRUE
)</errorConditionFormula>
        <errorMessage>Não é possível editar Simulação aprovada/Selecionada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nao_editar_AF_selecionada</fullName>
        <active>true</active>
        <description>Não é possível editar AF selecionada.</description>
        <errorConditionFormula>AND(
 TW1_Selecionada__c = TRUE,
 $Profile.Name &lt;&gt; &quot;Gestor Financeiro&quot;
)</errorConditionFormula>
        <errorMessage>Não é possível alterar  uma simulação selecionada. Entre em contato com o Gestor Financeiro.</errorMessage>
    </validationRules>
</CustomObject>